Bug 145324 - quanta: help unavailable from new project wizard
Summary: quanta: help unavailable from new project wizard
Status: RESOLVED FIXED
Alias: None
Product: quanta
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Debian testing Linux
: NOR normal
Target Milestone: ---
Assignee: András Manţia
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2007-05-11 19:33 UTC by Olivier Vitrat
Modified: 2007-10-04 11:46 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Olivier Vitrat 2007-05-11 19:33:21 UTC
Version:            (using KDE KDE 3.5.6)
Installed from:    Debian testing/unstable Packages

Reported in Debian BTS at http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=325336

Start a new project.  Hit the help button at the lower left of the
window that comes up.  Nothing happens.  It's repeatable.

.xsession-errors shows, apparently at the same time
meinproc: ERROR: File
'/usr/share/doc/kde/HTML/en//quanta/introduction-3-2.docbook' does not
exist

Help from the main quanta window works.
Comment 1 András Manţia 2007-10-04 11:46:24 UTC
SVN commit 721001 by amantia:

Fix help button in the New Project wizard.

BUG: 145324

 M  +1 -0      ChangeLog  
 M  +7 -1      project/projectprivate.cpp  
 M  +3 -0      project/projectprivate.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=721001