Fix help button in the New Project wizard.

BUG: 145324